rename igg to ygg, begging grid view, need to create 3d interface

--- a/settings.json
+++ b/settings.json
@@ -48,7 +48,7 @@
 		"env": {
 			"MONGO_URL": "mongodb://goldrunadmin:turnfearagainstthose@aws-us-east-1-portal.21.dblayer.com:10444/goldrundb?ssl=true",
             "MAIL_URL": "smtp://postmaster%40mg.goldrun.online:0975ef1bf94c7fe525014827dbc2455d-39bc661a-833f9eab@smtp.mailgun.org:587",
-			"ROOT_URL": "https://www.goldrun.online"
+			"ROOT_URL": "https://www.ygg.company"
 		}
 	}
 }
